--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 matplotlib==3.5.1
+networkx==3.3
 numpy==1.22.2
 pandas==1.5.0
+plotly==5.22.0
 scikit-learn==1.3.0
 streamlit==1.32.2
 umap-learn==0.5.6
